fix: remember me was not working (#23)
